# SysMan

./: .gitignore  CMakeLists.txt  README.md
SysMan/: CMakeLists.txt  CMakeLists.txt.user.6ee0dd3  SysMan  audio.cpp  audio.h  home.cpp  home.h  home.ui  main.cpp
include/sysman/: audio.hpp  home.hpp
src/: CMakeLists.txt  audio.cpp  home.cpp  main.cpp
ui/: home.ui
